--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <title>ThreadImage</title>
+    <!-- HTML Meta Tags -->
+<title>ThreadImage</title>
+<meta name="description" content="extract images from any threads post instantly">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://thread-image.vercel.app/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="ThreadImage">
+<meta property="og:description" content="extract images from any threads post instantly">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/6dd9e6ba-8353-4dd0-a12d-28e7010ad4aa.png?token=v_YnqZJFsdJkyOeKtBDhd4YfIx-UKZPC5hE_ayCTYmo&height=500&width=500&expires=33286887184">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="thread-image.vercel.app">
+<meta property="twitter:url" content="https://thread-image.vercel.app/">
+<meta name="twitter:title" content="ThreadImage">
+<meta name="twitter:description" content="extract images from any threads post instantly">
+<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/6dd9e6ba-8353-4dd0-a12d-28e7010ad4aa.png?token=v_YnqZJFsdJkyOeKtBDhd4YfIx-UKZPC5hE_ayCTYmo&height=500&width=500&expires=33286887184">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
